--- a/src/index.html
+++ b/src/index.html
@@ -12,19 +12,19 @@
   <body>
     <div class="main">
       <form>
-        <input type="text" name="ccname" placeholder="Enter CC name:" />
+        <input name="ccname" type="text" placeholder="Enter CC name:" />
         <input
-          type="number"
           name="cardnumber"
+          type="number"
           placeholder="Enter Card Number:"
         />
         <input
-          type="number"
           name="cvc"
+          type="number"
           placeholder="Enter CVC:"
           minlength="3"
         />
-        <input type="date" name="cc-exp" placeholder="Enter cc-exp date:" />
+        <input name="cc-exp" type="number" placeholder="Enter cc-exp date:" />
         <div class="emoji mb-6">💣🤯💥</div>
         <button class="button">Boom?</button>
       </form>
