--- a/src/index.html
+++ b/src/index.html
@@ -12,19 +12,25 @@
   <body>
     <div class="main">
       <form>
-        <input name="ccname" type="text" placeholder="Enter CC name:" />
+        <input name="ccname" 
+        class="input"
+        type="text" placeholder="Enter CC name:" />
         <input
           name="cardnumber"
+          class="input"
           type="number"
           placeholder="Enter Card Number:"
         />
         <input
           name="cvc"
           type="number"
+          class="input"
           placeholder="Enter CVC:"
           minlength="3"
         />
-        <input name="cc-exp" type="number" placeholder="Enter cc-exp date:" />
+        <input name="cc-exp" 
+        class="input"
+        type="number" placeholder="Enter cc-exp date:" />
         <div class="emoji mb-6">💣🤯💥</div>
         <button class="button">Boom?</button>
       </form>
